added another test

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p>Your Joshua Mostert - WDD130</p> 
         <p>Hello!</p>
         <p>test</p>
+        <p>test 2</p>
     </nav>
 </body>
 
