finished the content for the pages

--- a/unity_photography/site-plan.html
+++ b/unity_photography/site-plan.html
@@ -155,29 +155,83 @@
         </h2>
         <h3>Home page</h3>
         <p>
-            [Written copy for the home page here]
+            Home Page-Introduction/About Us
+            Hi, I'm Joshua
+            I am an award-winning photographer who loves to capture the moments of others. I have always had a passion
+            for photography and it has been in my family since my great grandfather. I have definitely been more on the
+            creative/arty side growing up and going through high school. Growing up you would always see me with a
+            camera. When I finished high school, I started Unity Photography with a couple of close friends and it grew
+            to be what it is today. Our team at Unity works our hardest to provide you with the best pictures for you to
+            cherish and share with others. We photoshoot weddings, family photos and school or graduations.
+            Why Us?
+            How others have described us
+            • Passionate
+            • Always working to improve
+            • Have an Artistic vision
+            • Creative
+            • Well-Coordinated
+            • Quality
+
         </p>
         <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/hero.jpg" alt="Hero image banner">
+        <img src="images/me.jpg" alt="Picture of me">
 
         </ul>
         <h3>[Page 2]</h3>
         <p>
-            [Written copy for the Page 2 here]
+            Page 2 - Our services
+            What we have to offer:
+            <br>Weddings:
+            <br> wedding day is one of the most special days in your life. It is a moment that should be kept forever.
+            Choose us at Unity Photography to capture this amazing day for you. We produce only the best and absolutely
+            beautiful photos that are works of art. We are precise and easy to work with. All you need to worry about is
+            having the best time ever while we ensure that those memories will last forever.
+            <br>Family:
+            <br>Your family is so important, that's why it is vital for you to have photos of them. Family photos
+            connect
+            the past to the present. They hold stories and help us reflect on times past. Having family photos also
+            helps preserve those in it for future generations to love and cherish. It allows you to look back on your
+            life and the lives of your loved ones and stir up stories of years gone by.
+            <br>School/Graduation:
+            <br>Life always goes by so quickly and many forget their youth or “good years”. Whether you are graduating
+            or
+            are just taking a normal school photo, it is just so precious to capture your youth and school years. The
+            time in your life will just fly by. School photos will show you how much you have grown. They will remind
+            you of the amazing stories and fun times you had with friends. They will show you a different era/phase in
+            your life.
+
         </p>
         <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/wedding.jpg" alt="wedding image">
+        <img src="images/family.jpg" alt="picture of a family">
+        <img src="images/graduation.jpg" alt="picture of graduating student">
 
         </ul>
         <h3>[Page 3]</h3>
         <p>
-            [Written copy for the Page 3 here]
+            Page 3 - FAQ
+            Frequently asked questions
+            <br>What is the pricing or how much does it cost to have a photoshoot?
+            The pricing scales with the time we are hired to photoshoot and the number or size of the photographs you
+            wish to have produced. On average a wedding is $2000-$3000, for family photos it is $200-$300 and for school
+            or graduation photos it is typically $100-$150. All prices vary according to customers needs but we always
+            offer the best prices. Photos do come in different combos.
+            <br>How can I book a photoshoot?
+            To book a photoshoot you can email us directly at UnityPhotography@gmail.com or phone our secretary with the
+            number 0794928616. We will then inquire you about pricing, dates, times, number of photos and sizes of
+            photos.
+            <br>How long will it take to receive my photos?
+            It depends on the number and size but usually take about 1 to 2 working weeks after the photoshoot.
+            Galleries will be hand delivered to you directly at your desired location.
+            <br>Where are we based and what area do we cover?
+            We are base in East London, South Africa and normally operate within a 50-60-mile radius of the city but can
+            travel further if needed.
+
         </p>
         <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/FAQ.jpg" alt="question marks">
+        <img src="images/pay.jpg" alt="pay logo">
 
         </ul>
         <hr>
