--- a/challenge_3/city_scape.html
+++ b/challenge_3/city_scape.html
@@ -10,28 +10,30 @@
 </head>
 
 <body>
-    <header>
-        
+    <div id="content">
+        <header>
+
             <img id="img" src="images/w09_ice_img.jpg" alt="City Scape picture">
-        
 
-    </header>
 
-    <main>
-        <div class="time">
-            <p>3 weeks ago</p>
-        </div>
-        <h1>Post Three</h1>
-        <div class="content">          
-            <p>This would be some text to go here and tell you about this awesome article that they should definitely
-                read. This would be some text to go here and tell you about this awesome article that they should
-                definitely read.This would be some text to go here and tell you about this awesome article that they
-                should definitely read.</p>
+        </header>
 
-        </div>
+        <main>
+            <div class="time">
+                <p>3 weeks ago</p>
+            </div>
+            <h1>Post Three</h1>
+            <div class="content">
+                <p>This would be some text to go here and tell you about this awesome article that they should
+                    definitely
+                    read. This would be some text to go here and tell you about this awesome article that they should
+                    definitely read.This would be some text to go here and tell you about this awesome article that they
+                    should definitely read.</p>
 
-    </main>
-    <footer>
+            </div>
+
+        </main>
+        <footer>
             <div class="read">
                 <h2>5<sup>m</sup></h2>
                 <h3>READ</h3>
@@ -44,9 +46,9 @@
                 <h2>15</h2>
                 <h3>COMMENTS</h3>
             </div>
-        </div>
+    </div>
     </footer>
-
+    </div>
 </body>
 
 </html>
