--- a/wwr/index.html
+++ b/wwr/index.html
@@ -18,7 +18,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="information.html">Information</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
@@ -77,9 +77,6 @@
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
-
-
-
         </footer>
 
     </div>
