did some diting

--- a/wwr/information.html
+++ b/wwr/information.html
@@ -28,8 +28,8 @@
                     <img id="hero2-img" src="images/hero2.jpg" alt="People enjoying rafting">
                 </div>
                 <Section class="hero-information">
-                    <h1>Information</h1>
-                    <p>Read and review all of our rafting tours below. Dates of tours availible and prices are shown
+                    <h1> Tour Information</h1>
+                    <p>Read over all of our amazing rafting tours below. The dates of our tours availible and prices are shown
                         below. Dont miss out on a ton of fun.</p>
                 </Section>
             </div>
