--- a/unity_photography/index.html
+++ b/unity_photography/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id=" content">
+    <div id="content">
         <header>
             <a id="logo" href="index.html">
                 <img src="images/logo.png" alt="Logo">
@@ -59,6 +59,7 @@
                     • Quality</p>
             </section>
             <section id="pictures">
+                <h2>Check our services page out</h2>
                 <section class="family">
                     <a id="family-home" href="services.html">
                         <img src="images/family.jpg" alt="Family picture">
