finished first page

--- a/unity_photography/index.html
+++ b/unity_photography/index.html
@@ -13,7 +13,7 @@
     <div id="content">
         <header>
             <a id="logo" href="index.html">
-                <img src="images/logo.png" alt="Logo">
+                <img class="logo-img" src="images/logo.png" alt="Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -23,20 +23,20 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img src="images/hero.jpg" alt="Family on a beach">
+                <img class="hero-img" src="images/hero.jpg" alt="Family on a beach">
             </div>
             <section id="hero-msg">
                 <h1 class="title"> Unity Photography</h1>
                 <div class="button-box">
-                    <a href="services.html">Book Now</a>
+                    <a class="book" href="services.html">Book Now</a>
                 </div>
             </section>
         </div>
 
         <main>
-            <section id="profile">
+            <section class="profile">
                 <h2>Introducting Me</h2>
-                <img id="me" src="images/me.jpg" alt="Picture of me">
+                <img class="me" src="images/me.jpg" alt="Picture of me">
                 <h3>Hi, I'm Joshua!</h3>
                 <p>I am an award-winning photographer who loves to capture the moments of others. I have always had a
                     passion
@@ -49,32 +49,34 @@
                     to be what it is today. Our team at Unity works our hardest to provide you with the best pictures
                     for you to
                     cherish and share with others. We photoshoot weddings, family photos and school or graduations.
-                    Why Us?
-                    Others have described us as
+                    <br>
+                    <br>Why Us?
+                    <br>
                     • Passionate
                     • Always working to improve
                     • Have an Artistic vision
                     • Creative
                     • Well-Coordinated
-                    • Quality</p>
+                    • Best Quality</p>
+                    
             </section>
-            <section id="pictures">
-                <h2>Check our services page out</h2>
+            <section class="pictures">
+                <h2>Check Our Services Page Out</h2>
                 <section class="family">
                     <a id="family-home" href="services.html">
-                        <img src="images/family.jpg" alt="Family picture">
+                        <img class="family-pic" src="images/family.jpg" alt="Family picture">
                     </a>
                     <h3>Family</h3>
                 </section>
                 <section class="wedding">
                     <a id="wedding-home" href="services.html">
-                        <img src="images/wedding.jpg" alt="Wedding picture">
+                        <img class="wedding-pic" src="images/wedding.jpg" alt="Wedding picture">
                     </a>
                     <h3>Wedding</h3>
                 </section>
                 <section class="school">
                     <a id="school-home" href="services.html">
-                        <img src="images/graduation.jpg" alt="Graduation picture">
+                        <img class="school-pic" src="images/graduation.jpg" alt="Graduation picture">
                     </a>
                     <h3>School</h3>
                 </section>
@@ -83,7 +85,7 @@
 
         <footer>
             <h3>Unity Photography 2022 -Joshua Mostert</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a class="site-plan" href="site-plan.html">Site Plan</a></h3>
             <div class="socials">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
