--- a/unity_photography/services.html
+++ b/unity_photography/services.html
@@ -13,7 +13,7 @@
     <div id="content2">
         <header>
             <a id="logo" href="index.html">
-                <img src="images/logo.png" alt="Logo">
+                <img class="logo-img" src="images/logo.png" alt="Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -23,7 +23,7 @@
         </header>
         <div id="hero-2">
             <div id="hero2-box">
-                <img src="images/camera.jpg" alt="Camera">
+                <img class="hero2-img" src="images/camera.jpg" alt="Camera">
             </div>
             <section id="hero2-msg">
                 <h1 class="title2">Check Out All Our Amazing Services Below </h1>
@@ -35,7 +35,7 @@
                 <div class="family-box">
                     <h3>Family</h3>
                 </div>
-                <img id="family-pic" src="images/family.jpg" alt="Family picture">
+                <img class="family2-pic" src="images/family.jpg" alt="Family picture">
                 <p>Your family is so important, that's why it is so vital for you to have photos of them. Family photos
                     connect
                     the past to the present. They hold stories and help us reflect on times past. Having family photos
@@ -48,7 +48,7 @@
                 <div class="wedding-box">
                     <h3>Wedding</h3>
                 </div>
-                <img id="wedding-pic" src="images/wedding.jpg" alt="Wedding picture">
+                <img class="wedding2-pic" src="images/wedding.jpg" alt="Wedding picture">
                 <p> Your wedding day is one of the most special days in your life. It is a new chapter in your life. It
                     is a moment that should be kept forever.
                     Choose us at Unity Photography to capture this amazing day for you. We produce only the best and
@@ -61,7 +61,7 @@
                 <div class="school-box">
                     <h3>School</h3>
                 </div>
-                <img id="school-pic" src="images/graduation.jpg" alt="Graduation picture">
+                <img class="school2-pic" src="images/graduation.jpg" alt="Graduation picture">
                 <p>Life always goes by so quickly and many forget their youth or “good years”. Whether you are
                     graduating
                     or
@@ -77,7 +77,7 @@
         </main>
         <footer>
             <h3>Unity Photography 2022 -Joshua Mostert</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a class="site-plan" href="site-plan.html">Site Plan</a></h3>
             <div class="socials">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
@@ -89,6 +89,8 @@
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
+
+
         </footer>
     </div>
 </body>
