--- a/unity_photography/site-plan.html
+++ b/unity_photography/site-plan.html
@@ -203,6 +203,7 @@
 
         </p>
         <p>Images for the Page 2</p>
+        <img src="images/camera.jpg" alt="camera">
         <img src="images/wedding.jpg" alt="wedding image">
         <img src="images/family.jpg" alt="picture of a family">
         <img src="images/graduation.jpg" alt="picture of graduating student">
