--- a/unity_photography/faq.html
+++ b/unity_photography/faq.html
@@ -13,7 +13,7 @@
     <div id="content3">
         <header>
             <a id="logo" href="index.html">
-                <img src="images/logo.png" alt="Logo">
+                <img class="logo-img" src="images/logo.png" alt="Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -28,13 +28,13 @@
                     any
                     answers you are looking for.</p>
             </div>
-            <img id="question" src="images/FAQ.jpg" alt="Question mark">
+            <img class="question" src="images/FAQ.jpg" alt="Question mark">
         </section>
 
         <main>
             <section class="pricing-booking">
                 <h2>Frequently Asked Questions</h2>
-                <img src="images/pay.jpg" alt="Pay picture">
+                <img class="pay-pic" src="images/pay.jpg" alt="Pay picture">
                 <div class="pricing">
                     <h3>Pricing</h3>
                     <p>What is the pricing or how much does it cost to have a photoshoot?
@@ -58,7 +58,7 @@
                 </div>
             </section>
             <section class="order-bounds">
-                <img src="images/map.png" alt="Map logo">
+                <img class="map-pic" src="images/map.png" alt="Map logo">
                 <div class="order">
                     <h3>Receiving Orders</h3>
                     <p>How long will it take to receive my photos?
@@ -78,7 +78,7 @@
         </main>
         <footer>
             <h3>Unity Photography 2022 -Joshua Mostert</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a class="site-plan" href="site-plan.html">Site Plan</a></h3>
             <div class="socials">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
@@ -90,6 +90,8 @@
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
+
+
         </footer>
     </div>
 </body>
