--- a/unity_photography/faq.html
+++ b/unity_photography/faq.html
@@ -37,7 +37,7 @@
                 <img class="pay-pic" src="images/pay.jpg" alt="Pay picture">
                 <div class="pricing">
                     <h3>Pricing</h3>
-                    <p>What is the pricing or how much does it cost to have a photoshoot?
+                    <p>What is the pricing and how much does it cost to have a photoshoot?
                         The pricing scales with the time we are hired to photoshoot and the number or size of the
                         photographs you
                         wish to have produced. On average a wedding is $2000-$3000, for family photos it is $200-$300
